[tool.poetry]
name = "winecasino"
version = "0.1.0"
description = ""
authors = ["Nikita Kharlov <nikita@harlov.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.3"
pytest-asyncio = "^0.14.0"
pytest-lazy-fixture = "^0.6.3"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
